crates/toml/tests/snapshots/invalid/table/no-close-07.stderr
TOML parse error at line 1, column 4
  |
1 | [']
  |    ^
unclosed table, expected `]`

---
TOML parse error at line 1, column 4
  |
1 | [']
  |    ^
invalid literal string, expected `'`
